--- a/footer.html
+++ b/footer.html
@@ -535,7 +535,7 @@
                                                 <ul class="list-clean footer-link-list-sub" style="display: none;">
                                                     
                                                 <li>
-                                                    <a href="/employers/submit-a-job/" target="_self">submit a job</a>
+                                                    <a href="/employers/submit-a-job/" target="_self">Submit Job</a>
                                                 </li>
                                             
                                                 <li>
